# aicapturebase

./: README.md  config.py  example.py  exceptions.py  main.py  pyproject.toml  requirements.txt
controls/: __init__.py
controls/keyboard/: __init__.py
controls/mouse/: __init__.py  base.py  pyautogui_mouse.py  pydirectinput_mouse.py  pynput_mouse.py  win32_mouse.py
grabbers/: __init__.py  base.py  d3dshot_grabber.py  dxcam_capture_grabber.py  dxcam_grabber.py  mss_grabber.py  obs_vc_grabber.py  screengear_grabber.py  win32_grabber.py
streaming/: __init__.py  client.py
utils/: __init__.py  benchmark.py  cv.py  cv2.py  fps.py  nms.py  timing.py  win32.py  windmouse.py
